# FunWithCombinatorics

./: CHANGELOG.md  FunWithCombinatorics.cabal  LICENSE  README.md
app/: Primitives.hs
