cabal-version:      2.4
name:               FunWithCombinatorics
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: Enumerative Combinatorics in Haskell.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             james
maintainer:         50460460+alexacallmebaka@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable combo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Primitives

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    --                  liquidhaskell ^>= 0.9.0.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
